About page fixes

--- a/index.html
+++ b/index.html
@@ -16,15 +16,48 @@ var waypoint = new Waypoint({
 })
 {% endhighlight %}
 
-    <p>It comes in jQuery, Zepto, and no-framework flavors.</p>
+    <p>Builds are available for multiple DOM libraries.</p>
+
+    <ul class="flavor-requirements">
+      <li>
+        <span>jQuery</span>
+        1.8+
+      </li>
+      <li>
+        <span>Zepto</span>
+        1.1+
+      </li>
+      <li>
+        <span>No Framework</span>
+        IE 9+
+      </li>
+    </ul>
   </section>
   <section class="download">
-    <p><a href="https://github.com/imakewebthings/waypoints/zipball/latest" class="large-button">Download Now</a></p>
+    <pre class="one-liner"><code>npm install waypoints</code></pre>
     <p class="or">or</p>
     <pre class="one-liner"><code>bower install waypoints</code></pre>
     <p class="or">or</p>
-    <pre class="one-liner"><code>npm install waypoints</code></pre>
-    <p class="or">or</p>
-    <p><a href="https://github.com/imakewebthings/waypoints" class="large-button">View on GitHub</a></p>
+
+    <ul class="about-links">
+      <li>
+        <a href="https://github.com/imakewebthings/waypoints">
+          {% include code.svg %}
+          <span>GitHub</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/imakewebthings/waypoints/zipball/latest">
+          {% include data-transfer-download.svg %}
+          <span>Download</span>
+        </a>
+      </li>
+      <li>
+        <a href="http://stackoverflow.com/questions/tagged/jquery-waypoints">
+          {% include question-mark.svg %}
+          <span>Get Help</span>
+        </a>
+      </li>
+    </ul>
   </section>
 </main>
