--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@ var waypoint = new Waypoint({
     <ul class="about-links">
       <li>
         <a href="https://github.com/imakewebthings/waypoints">
-          {% include code.svg %}
+          {% include ei-sc-github.svg %}
           <span>GitHub</span>
         </a>
       </li>
       <li>
         <a href="https://github.com/imakewebthings/waypoints/zipball/latest">
-          {% include data-transfer-download.svg %}
+          {% include ei-arrow-down.svg %}
           <span>Download</span>
         </a>
       </li>
       <li>
         <a href="http://stackoverflow.com/questions/tagged/jquery-waypoints">
-          {% include question-mark.svg %}
+          {% include ei-question.svg %}
           <span>Get Help</span>
         </a>
       </li>
