--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ var waypoint = new Waypoint({
     </ul>
   </section>
   <section class="download">
+    <pre class="one-liner"><code>npm install waypoints</code></pre>
+    <p class="or">or</p>
     <pre class="one-liner"><code>bower install waypoints</code></pre>
     <p class="or">or</p>
 
