--- a/demo.html
+++ b/demo.html
@@ -10,15 +10,17 @@
 
 
 <style type="text/css">
-	.a { height: 300px; 
-			width: 200px;
-		}
+body{
+margin: 0px;
+}
+	.a { height: 300px; width: 100px;}
+}
 </style>
-<body>
+<body style="width: 2000px;">
 	<div id="d1" class="a d" style="background-color: orange"></div>
-	<div id="d2" class="a" style="background-color: lightblue"></div>
-	<div id="d3" class="a" style="background-color: orange"></div>
-	<div id="d4" class="a" style="background-color: lightblue"></div>
+	<div id="d2" class="a d" style="background-color: lightblue"></div>
+	<div id="d3" class="a d" style="background-color: orange"></div>
+	<div id="d4" class="a d" style="background-color: lightblue"></div>
 </body>
 <script type="text/javascript">
 	$('.a').each(function(){
