Fix front page code typo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ top_level_section: about
 
 {% highlight js %}
 var waypoint = new Waypoint({
-  element: document.getElementById('#waypoint'),
+  element: document.getElementById('waypoint'),
   handler: function(direction) {
     console.log('Scrolled to waypoint!')
   }
